<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileScreen">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/profile_t"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/profile_name_t"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <TextView
        android:id="@+id/email_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_email_t"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/name_t"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_box" />

    <TextView
        android:id="@+id/gender_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/profile_gender_t"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/email_edit_box"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_box" />

    <TextView
        android:id="@+id/weight_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/profile_weight_t"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/height_t"
        app:layout_constraintTop_toBottomOf="@+id/height_t" />

    <TextView
        android:id="@+id/height_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/profile_height_t"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/gender_t"
        app:layout_constraintTop_toBottomOf="@+id/sex_spin" />

    <EditText
        android:id="@+id/name_edit_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/name_t"
        app:layout_constraintTop_toBottomOf="@+id/name_t" />

    <EditText
        android:id="@+id/email_edit_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/email_t"
        app:layout_constraintTop_toBottomOf="@+id/email_t" />

    <Button
        android:id="@+id/save_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sex_spin"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:popupBackground="?attr/colorButtonNormal"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/gender_t" />

    <Spinner
        android:id="@+id/inches_spin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:popupBackground="?attr/colorButtonNormal"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/feet_spin" />

    <Spinner
        android:id="@+id/feet_spin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:popupBackground="?attr/colorButtonNormal"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/height_t" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/inch_t"
        app:layout_constraintBottom_toBottomOf="@+id/inches_spin"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/feet_t"
        app:layout_constraintEnd_toStartOf="@+id/inches_spin"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/weight_edit_box"
        android:layout_width="103dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/weight_t" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/lbs_t"
        app:layout_constraintBottom_toBottomOf="@+id/weight_edit_box"
        app:layout_constraintEnd_toEndOf="@+id/textView3" />

</android.support.constraint.ConstraintLayout>