...
    <string name="profile_name_t">Name:</string>
    <string name="profile_email_t">E-mail:</string>
    <string name="profile_phone_t">Phone Number:</string>
    <string name="profile_gender_t">Sex:</string>
    <string name="profile_height_t">Height:</string>
    <string name="profile_weight_t">Weight:</string>
    <string name="edit_t">Edit</string>
    <string name="save_t">Save</string>
    <string name="feet_t">ft</string>
    <string name="inch_t">in</string>
    <string name="lbs_t">lbs</string>
    <string name="seconds_t">seconds</string>
    <string name="drink_history_t">Drink History</string>

...
